# CozyCopilot

./: .env.example  .gitignore  .prettierignore  .prettierrc  BUILD.md  HANDOFF.md  capacitor.config.ts  eslint.config.mjs  middleware.test.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
android/: README.md  build.gradle
app/: layout.tsx  page.tsx
app/(embed)/: layout.tsx
docs/superpowers/: m1-complete.md  m2-complete.md  m3-complete.md  m3-progress.md  m4-complete.md  m5-complete.md  m6-complete.md  m7-complete.md
ios/: README.md
ios/App/: Podfile
mocks/handlers/: index.ts
public/embed/: loader.js  test-page.html
scripts/: build-desktop.mjs  build-embed.mjs  build-mobile.mjs  build-scripts.check.mjs  build-static.mjs  build-static.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/hooks/: useCapability.test.ts  useCapability.ts  useNotify.test.ts  useNotify.ts
src/stores/: auth.test.ts  auth.ts  session.test.ts  session.ts  theme.test.ts  theme.ts
src/styles/: globals.css  themes.data.ts  themes.test.ts  tokens.css
src/test/: setup.ts
tests/a11y/: components.test.tsx  keyboard.test.tsx
tests/contract/: _setup.ts  auth.contract.test.ts  chat.contract.test.ts  embed-transport.contract.test.ts  memory.contract.test.ts  personalities.contract.test.ts  providers.contract.test.ts  sessions.contract.test.ts  voice.contract.test.ts
(+222 files in other folders)
