[package]
name = "cozycopilot"
version = "0.3.0"
description = "CozyCopilot desktop app"
authors = ["ZhangJun"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cozycopilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
